# polygon

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: aggregates.rs  quotes.rs  stock_dividends.rs  stock_splits.rs
polygon/: Cargo.toml
polygon-downloader/: .env  Cargo.toml
polygon-downloader/src/: app.rs  main.rs
polygon/src/rest/: client.rs  reference.rs  request.rs  stocks.rs
polygon/src/ws/: mod.rs
polygon/src/ws/types/: polygon.rs
src/: errors.rs  lib.rs
src/domain/: mod.rs  tape.rs
src/domain/aggregates/: rest.rs
src/domain/quotes/: conditions.rs  mod.rs  rest.rs  websocket.rs
src/domain/trades/: conditions.rs  mod.rs  websocket.rs
src/rest/: client.rs  date_utils.rs  mod.rs  reference.rs  stocks.rs
src/rest/reference/: market_holidays.rs  market_status.rs  mod.rs  stock_dividends.rs  stock_splits.rs  ticker_details.rs  ticker_types.rs
src/ws/: mod.rs  types.rs
src/ws/types/: aggregates.rs  mod.rs  polygon.rs  quotes.rs  trades.rs
