[package]
name = "polygon"
version = "0.2.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio-tungstenite = { version = "0.13", features = ["stream", "tls"], optional = true }
tokio = { version = "1.0", default-features = false, features = ["net"], optional = true}
tracing = "0.1"

[dev-dependencies]
env_logger = "0.8"
futures-channel = "0.3"
mockito = "0.29"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[features]
default = ["rest", "ws"]
rest = ["reqwest"]
ws = ["tokio-tungstenite", "tokio/net", "futures"]
