[package]
name = "polygon"
version = "0.13.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.6.0", features = ["serde"] }
futures = { version = "0.3"}
itertools = "0.10"
rust_decimal = { version = "1.11", features = ["serde-float"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio-tungstenite = { version = "0.15", features = ["stream", "rustls-tls"], optional = true }
tokio = { version = "1.0", default-features = false, features = ["net"], optional = true}
tracing = "0.1"
vila = { version = "2.1", optional = true, features = ["progress"] }
uuid = { version = "0.8.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.45"
env_logger = "0.9.0"
futures-channel = "0.3"
log = "0.4.14"
mockito = "0.30"
rust_decimal_macros = "1.11"
stream-flatten-iters = "0.2.0"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[features]
default = ["rest", "ws"]
rest = ["vila"]
ws = ["tokio-tungstenite", "tokio/net"]

[[example]]
name = "aggregates"
required-features = ["rest"]

[[example]]
name = "quotes"
required-features = ["rest"]
